--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body class="">
-    <header class="w-[1170px] mx-auto">
-        <nav class="flex justify-between items-center mt-14 mb-14">
+    <header class="max-w-[1170px] mx-auto">
+        <nav class="md:flex justify-between items-center my-14">
             <div class="website-logo">
                 <img src="./images/logo2.png" alt="website logo">
             </div>
@@ -34,13 +34,72 @@
                 </ul>
             </div>
             <div class="nav-righ">
-                <button class="bg-[#b68c5a] px-8 py-5 rounded-lg text-white font-semibold text-[18px]">Free
+                <button
+                    class="bg-[#b68c5a] px-8 py-5 rounded-lg text-white font-semibold text-[18px] cursor-pointer">Free
                     Consultation</button>
             </div>
         </nav>
+        <section class="banner max-w-[1170px] bg-[url(./images/banner.png)] px-[240px] py-[104px] rounded-2xl">
+            <div class="bg-[url(./images/Rectangle5.png)] text-center">
 
+                <h1 class="text-6xl/[84px] text-white font-extrabold">We Provide Effective
+                    Legal Solutions
+                </h1>
+                <p class="text-[16px]/[26px] text-white">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour.
+                </p>
+                <div>
+                    <input type="text" class="bg-white w-[500px] h-[64px] mt-3 rounded-xl px-4 mr-3.5 "
+                        placeholder="Search your Services">
+                    <button
+                        class="bg-[#b68c5a] px-8 py-5 h-[64px] rounded-lg text-white font-semibold text-[18px] cursor-pointer">Search</button>
+                </div>
+            </div>
+        </section>
     </header>
     <main>
+        <section class="max-w-[1170px] mx-auto text-center">
+            <div class="w-[714px] mx-auto my-14">
+                <h1 class="text-4xl font-extrabold text-[#414040] mb-5">The Legal Practice Area</h1>
+                <p class="text-[16px]/[26px] text-[#707070]">There are many variations of passages of Lorem Ipsum
+                    available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour.</p>
+            </div>
+        </section>
+        <section class="max-w-[1170px] mx-auto grid grid-cols-3">
+            <!-- 1 -->
+            <div class="text-center p-16">
+                <img class="mb-[30px] mx-auto" src="./images/business.png" alt="">
+                <h1 class="text-3xl font-extrabold text-[#414040] mb-6">Business Law</h1>
+                <p class="text-[16px]/[26px] text-[#707070]">There are many variations of passages of Lorem Ipsum
+                    available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour.</p>
+                <img class="mx-auto mt-4" src="./images/Frame.png" alt="">
+            </div>
+            <!-- 2 -->
+            <div class="text-center p-16 bg-linear-to-b from-[#00000011] to-[#ffffff]">
+                <img class="mb-[30px] mx-auto " src="./images/criminal.png" alt="">
+                <h1 class="text-3xl font-extrabold text-[#414040] mb-6">Criminal Law</h1>
+                <p class="text-[16px]/[26px] text-[#707070]">There are many variations of passages of Lorem Ipsum
+                    available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour.</p>
+                <img class="mx-auto mt-4" src="./images/Frame.png" alt="">
+            </div>
+            <!-- 3 -->
+            <div class="text-center p-16">
+                <img class="mb-[30px] mx-auto" src="./images/child.png" alt="">
+                <h1 class="text-3xl font-extrabold text-[#414040] mb-6">Child Support</h1>
+                <p class="text-[16px]/[26px] text-[#707070]">There are many variations of passages of Lorem Ipsum
+                    available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour.</p>
+                <img class="mx-auto mt-4" src="./images/Frame.png" alt="">
+            </div>
+        </section>
 
     </main>
     <footer>
